--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,37 @@
+.porosBerita__header_frame {
+  /* Blog Header */
+
+  position: relative;
+  width: 100%;
+  height: 50vh;
+  left: 0px;
+  top: 0px;
+}
+.porosBerita__header_background{
+  /* Background */
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 50vh;
+  object-fit: cover;
+}
 .porosBerita__header_title {
-  font-size: 12rem;
+  /* FASHION */
+
+  position: static;
+  width: 42px;
+  height: 12px;
+  left: calc(50% - 42px/2);
+  top: calc(50% - 12px/2);
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 10px;
+  line-height: 12px;
+  /* identical to box height */
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  color: #000000;
 }
