--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -192,9 +192,9 @@
 .porosBerita__content_writer_socmed{
   float: left;
   position: relative;
-  width: 20px;
-  height: 20px;
-  background: #495057;
+  width: 25px;
+  height: 25px;
+  margin: 0px 5px 5px 5px;
 
 }
 
