--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -228,24 +228,63 @@
 }
 .porosBerita__footer_maintag {
   /* maintag box */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 5px 10px;
-
-  position: relative;
-  width: 62px;
-  height: 22px;
-  margin-right: 5px;
-  margin-top: 5px;
-
+  right: 10px;
+  top: 8px;
+  padding: 2px 10px 2px 10px;
+  font-size: 12px;
+  position: absolute;
   background: rgba(255, 255, 255, 0.15);
   border-radius: 8px;
   color: #dddddd;
 }
+.porosBerita__footer_tanggal {
+  /* Tanggal Card */
+
+  position: absolute;
+  left: 10px;
+  top: 39%;
+
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  display: flex;
+
+  color: #E5E5E5;
+}
+.porosBerita__footer_title {
+  /* Title card */
+
+  position: absolute;
+  left: 10px;
+  right: 10px;
+  top: 48%;
+  text-align: left;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 18px;
+
+  color: #FFFFFF;
+}
+.porosBerita__footer_subtitle{
+  /* Subtitle card */
+
+  position: absolute;
+  left: 10px;
+  right: 10px;
+  top: 65%;
+  text-align: left;
+
+  font-style: normal;
+  font-weight: normal;
+  font-size: 10px;
+  color: #E5E5E5;
+}
 
 @media screen and (max-width:1024px) {
+  .porosBerita__footer_posts_card_image{
+    width: 30.5%;
+  }
   .porosBerita__header_subtitle{
     top: 25%;
   }
@@ -257,7 +296,29 @@
     height: 10%;
   }
 }
+@media screen and (max-width:1024px),screend and (max-height:768px) {
+  .porosBerita__footer_tanggal {
+    font-size: 10px;
+  }
+  .porosBerita__footer_title {
+    line-height: 14px;
+    font-size: 12px;
+  }
+  .porosBerita__footer_subtitle{
+    font-size: 8px;
+  }
+}
 @media screen and (max-width:1023px),screen and (max-height:600px) {
+  .porosBerita__footer_tanggal {
+    font-size: 10px;
+  }
+  .porosBerita__footer_title {
+    font-size: 12px;
+    line-height: 14px;
+  }
+  .porosBerita__footer_subtitle{
+    font-size: 8px;
+  }
   .porosBerita__header_subtitle{
     top: 10%;
   }
@@ -265,7 +326,20 @@
     top: 14%;
   }
 }
+@media screen and (max-width:1280px),screen and (max-height:800px) {
+  .porosBerita__footer_posts_card_image{
+    width: 30.5%;
+  }
+}
 @media screen and (max-width:870px) {
+  .porosBerita__footer_title {
+    font-size: calc((.1em + 1vmin) + (.1em + 1vmax));
+    line-height: 14px;
+  }
+  .porosBerita__footer_subtitle {
+    font-size: calc((.015em + .5vmin) + (.015em + 1vmax));
+    line-height: 14px;
+  }
   .porosBerita__footer_posts_card_image{
     width: 100%;
   }
@@ -338,6 +412,19 @@
   }
 }
 @media screen and (max-width:320px) {
+  .porosBerita__footer_title {
+    font-size: calc((.01em + 1vmin) + (.01em + 1vmax));
+    line-height: 12px;
+    top: 32%;
+  }
+  .porosBerita__footer_tanggal {
+    top: 20%;
+  }
+  .porosBerita__footer_subtitle {
+    top: 50%;
+    font-size: calc((.01em + .5vmin) + (.01em + 1vmax));
+    line-height: 10px;
+  }
   .porosBerita__footer_posts_card_image{
     width: 100%;
   }
