--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -1,25 +1,25 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
-
 .card {
-  width: 280px;
   border-radius: 10px;
+  /* border-style: solid;
+  border-width: 1px;
+  border-color: rgb(31, 31, 31); */
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.486);
   overflow: hidden;
   transition: 0.25s;
   background-color: rgb(31, 31, 31);
   position: relative;
+  z-index: 0;
 }
 .card:hover {
   transform: scale(1.025);
 }
 .card__info {
   border-top: 4px solid rgb(91, 218, 91);
-  padding: 0;
+  padding: 1rem;
   text-align: center;
 }
 .card__title {
   color: white;
-  font-family: "Roboto", sans-serif;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.123);
 }
 .card__modal {
@@ -35,7 +35,6 @@
   opacity: 1;
 }
 .card__button {
-  font-family: "Roboto", sans-serif;
   color: white;
   border-radius: 5px;
   letter-spacing: 1px;
